--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,19 @@ body {
     margin: 0;
     padding: 0;
   }
+  html, body {
+    font-family: 'Cairo', sans-serif;
+  }
   
+  * {
+    font-family: 'Cairo', sans-serif !important;
+  }
+  .loader {
+    border-top-color: #4f45e4;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
